some more changes and cleanups

--- a/css/main.css
+++ b/css/main.css
@@ -1,39 +1,57 @@
 body {
     background-image: url("../img/FrontPage.jpg");
     color: white;
-    /* filter: blur(4.4px); */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #logo {
     position: relative;
     margin-left: 200px;
+    text-transform: uppercase; 
+    background-color: #386e84;
+    top: 0px;
+    left: 0px;
+    width: 26px;
+    height: 160px;
 }
 
 .call-to-action {
-    margin-top: -80px;
+    position: relative;
+    margin-top: -150px;
+    text-transform: uppercase; 
+    z-index: 1px;;
 }
 
 .heading {
     position: relative;
     text-align: center;
     text-transform: uppercase; 
-    /* line-height: 1.8px; */
+    font-size: 60px;
 }
 
-/* .h1>.heading {
-    line-height: 2.8px;
-} */
-
 .navbar-default {
+    position: relative;
     background-color: transparent;
     border-color: transparent;
     margin-bottom: 50px;
+    text-transform: uppercase;
 }
 
 .navbar-default .navbar-nav > li > a {
     color: white;
 }
 
+.navbar-default .navbar-nav >li>a:hover {
+    color: white;
+    border-bottom: 3px solid white;
+}
+
 .testimony {
+    position: relative;
     background: rgba(42, 160, 177, 0.3);
+    font-size: 18px;
+    text-transform: uppercase; 
+    padding: 20px 5px 15px 5px;
+    width: 470px;
+    height: 400px;
 }
